# myapi-rust

./: .gitignore  Cargo.toml  README.md  codecrafters.yml
src/: config.rs  lib.rs  main.rs
src/http/: comm.rs  methods.rs  mod.rs  request.rs  response.rs  status.rs
src/parsers/: http.rs
src/routing/: handler.rs  mod.rs  route.rs  router.rs
src/server/: app.rs
src/utils/: formatter.rs  mod.rs  parsers.rs
tests/: app_tests.rs  concurrencia.sh
tests/files/: hola.txt
