[package]
name = "myapi-rust"
version = "0.1.0"
authors = ["Marcel marcel.calleja@estudiantat.upc.edu"]

[lib]
name = "myapi_rust"
path = "src/lib.rs"

[dependencies]
httparse = "1.8.0"
regex = "1.10.4"

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
criterion = "0.3.6"
