[package]
name = "myapi-rust"
version = "0.1.0"
authors = ["Marcel marcel.calleja@estudiantat.upc.edu"]
edition = "2021"

[lib]
name = "myapi_rust"
path = "src/lib.rs"

[dependencies]
httparse = "1.8.0"
tokio = { version = "1.37", features = ["net", "sync", "rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
criterion = "0.3.6"
reqwest = "0.12.4"

